# upstreamseas

./: .gitignore  Cargo.toml  category.fish  fish.fish  notes.txt
src/: error_handling.rs  main.rs  mounter.rs
src/entities/: author.rs  book.rs  book_author.rs  book_category.rs  borrow.rs  category.rs  mod.rs  prelude.rs  student.rs  ticket.rs
src/routes/: mod.rs
src/routes/author/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/book/: delete.rs  dto.rs  filter.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/book_author/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/book_category/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/borrow/: business.rs  delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/category/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/student/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/routes/ticket/: delete.rs  dto.rs  get.rs  mod.rs  post.rs  put.rs
src/site/: calm.html
